# bkclaw

./: .env.example  .git-push-check  .gitignore  AGENTS.md  BOOTSTRAP.md  CANONICAL_AGENT_RULES.md  Dockerfile.gaejae  IDENTITY.md  OPERATING_HARDENING.md  README.md  TOOLS.md  USER.md  WORKING_RULES.md  WORKSPACE_SCOPE.md  build_gaejae_image  check_gaejae_db  dispatch_discord.py  pyproject.toml  requirements.txt  restart_gaejae
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
dags/: kis_ohlcv_collector.py  kis_snapshot_collector.py  paper_idea_pipeline.py
datas/: README.md
harness/: DEFAULT_TASK_LOOP.md  GAEJAE_OPERATING_POLICY.md
memory/: 2026-03-13.md
projects/tft-us-quantdb/: README.md  pyproject.toml
projects/tft-us-quantdb/src/tft_us_quantdb/: __init__.py  __main__.py  validation.py
projects/tft-us-quantdb/src/tft_us_quantdb/cli/: main.py
projects/tft-us-quantdb/src/tft_us_quantdb/config/: core.py
projects/tft-us-quantdb/src/tft_us_quantdb/features/: registry.py
projects/tft-us-quantdb/src/tft_us_quantdb/models/: tft.py
projects/tft-us-quantdb/src/tft_us_quantdb/pipeline/: rolling.py
projects/tft-us-quantdb/tests/: test_mock_pipeline.py  test_validation.py
quant-team/: BACKTEST_VERIFICATION_CHECKLIST.md  DEFAULT_RUN_POLICY.md  EXECUTION_TEMPLATE.md  INDEX.md  INTAKE_GATE_CHECKLIST.md  INTAKE_QUESTIONS_TEMPLATE.md  PERFORMANCE_REPORT_TEMPLATE.md  PERFORMANCE_REVIEW_POLICY.md  QUANT_TEAM_ENTRY.md  QUANT_TEAM_SPEC.md  ROLE_PROMPTS.md  ROUND_00_MANDATE_TEMPLATE.md  ROUND_REVIEW_TEMPLATE.md  RUNBOOK.md
scripts/: build_gaejae_image.sh  (+25 more)
(+151 files in other folders)
